--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
 .container {
   min-height: 100vh;
   padding: 0 0.5rem;
@@ -6,8 +8,14 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background-color: #000;
+  outline: none;
 }
-
+.container h1 {
+  font-size: 25vw;
+  font-family: 'Varela Round', 'Helvetica Neue', Arial, sans-serif;
+  font-weight: lighter;
+}
 .main {
   padding: 5rem 0;
   flex: 1;
@@ -84,18 +92,10 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   width: 45%;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
 
 .card h2 {
   margin: 0 0 1rem 0;
