--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -14,7 +14,14 @@
 .container h1 {
   font-size: 25vw;
   font-family: 'Varela Round', 'Helvetica Neue', Arial, sans-serif;
-  font-weight: lighter;
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+  cursor: default;
 }
 .main {
   padding: 5rem 0;
