--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -14,6 +14,7 @@
 .container h1 {
   font-size: 25vw;
   font-family: 'Quicksand', 'Helvetica Neue', Arial, sans-serif;
+  font-weight: lighter;
   -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
      -khtml-user-select: none; /* Konqueror HTML */
